# MDtopptx

./: .cursorignore  .gitignore  README.md  mistune_ast_reference.md  pyproject.toml  requirements.txt
md2pptx_builder/: __init__.py  app.py  builder.py  cli.py  parser.py  utils.py
md2pptx_builder.egg-info/: SOURCES.txt  requires.txt  top_level.txt
samples/: test.md
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_mistune_compatibility.py  test_parser.py
